# SimpleWorm

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.cfg
src/KNN/: clustering.py  knn.py  tests.py
src/Models/: tests.py
src/Models/KNN/: binary_clustering.py  clustering.py  knn.py  tests.py
src/Models/SoftTree/: assembled_models.py  assembled_models_em.py  data_weight_generators.py  decoders.py  forest.py  hybrid_models.py  klayers.py  kmodel.py  layers.py  loss_funcs.py  model_builders.py  model_interfaces.py  models.py  objective_funcs.py  simple_predictors.py  test_train.py  tests.py  train_model.py  tree.py
src/RunScripts/: build_masks.py  data_loader.py  dataset_ops.py  decode_binary.py  inp_data.py  run_decode.py  run_decode_binary.py  run_null_decode.py  run_soft_forest.py  run_tvar_analysis.py  sampling_utils.py  test_dataset_ops.py  time_handler.py  utils.py  utils_tf.py
src/RunScripts/Dev/: run_tvar_analysis.py
src/Sampler/: README.md  anml_factory.py  anml_sampling.py  build_dset.py  data_source.py  design.drawio  drawer.py  drawer_factory.py  even_split_factory.py  experiments.py  file_reps.py  file_reps_np.py  file_reps_tf.py  file_sets.py  flattener.py  h_sampler.py  sampler_iface.py  set_sampling.py  source_sampling.py  test_flattener.py  test_sampling.py  tests.py  tfrecords_testing.py  tfrecords_utils.py  thin_sampler.py  utils.py
src/Sampler/Dev/: test_drawer.py
src/Sampler/tests/: test_sampling.py
src/Sampler/utils/: tfrecords_utils.py
tests/Sampler/: test_data_source.py  test_dset_build.py  test_set_sampling.py
(+5 files in other folders)
