[tool.poetry]
name = "simpleworm"
version = "0.1.0"
description = "Worm Thoughts"
authors = ["ZT Cecere"]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.21.5"
tensorflow = "^2.7.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
